Bugfix - PDP fix scroll styles
Bugfix - scrollbar is functioning as suppose according to design

--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -13,15 +13,33 @@
         height: 700px;
         width: 200px;
         margin-left: 60px;
+        overflow-y: scroll;
+        overflow-x: hidden;
+        transition: ease-in-out 0.35s;
+
+        &::-webkit-scrollbar {
+            height: 3px;
+            width: 2px;
+            background-color: $white;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: inherit;
+        }
+
+        &:hover {
+            background-color: $black;
+        }
 
         .slideTape {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            overflow-y: scroll;
-            height: 100%;
+            height: fit-content;
             width: 100%;
             row-gap: 45px;
+            background-color: $white;
+            overflow: hidden;
 
             .slideContainer {
                 .slide {
